--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost/mialidb?useSSL=false&allowMultiQueries=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=2dawa
+spring.datasource.password=2daw2223
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
