--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,17 @@
 			<artifactId>gson</artifactId>
 			<version>2.10</version>
 		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>kernel</artifactId>
+			<version>7.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>io</artifactId>
+			<version>7.0.2</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
