--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,14 @@
 			<artifactId>io</artifactId>
 			<version>7.0.2</version>
 		</dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>17.0.0</version>
+            <scope>compile</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
